--- a/resume/index.html
+++ b/resume/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <head>
+  <link rel="stylesheet" href="styles.css"
   <<title>Sarah Elbeshbishi's Resume</title>
 
-  <style type="text/css">
-  h1{
-    font-size: 36px;
-    color: #33485e;
-  }
-  </style>
-  
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
+
 <head>
 <body>
 
   <!-- I built this myself -->
 
   <h1>Sarah Elbeshbishi</h1>
+
+<!--
     <img src="selbeshbishi headshot.jpg" width="300px">
+-->
 
   <ul>
     <li>selbeshb@terpmail.umd.edu</li>
