--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="styles.css"
-  <<title>Sarah Elbeshbishi's Resume</title>
+
+  <link rel="stylesheet" href="styles.css">
+
+  <title>Sarah Elbeshbishi's Resume</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -10,52 +12,62 @@
 <head>
 <body>
 
+<div id="container">
+
   <!-- I built this myself -->
 
-  <h1>Sarah Elbeshbishi</h1>
+  <div id="name">Sarah Elbeshbishi</div>
 
 <!--
     <img src="selbeshbishi headshot.jpg" width="300px">
 -->
-
+<div class="menu">
   <ul>
     <li>selbeshb@terpmail.umd.edu</li>
     <li><a href="https://www.linkedin.com/in/sarahelbeshbishi/">LinkedIn</a></li>
     <li><a href="https://twitter.com/sarahbishi">Twitter</a></li>
     <li><a href="https://github.com/selbeshbishi">GitHub</a></li>
   </ul>
+</div>
 
-<strong>Undergraduate journalism student</strong>
-  <p>I am a junior journalism and public policy double major at the University of Maryland, College Park. I am on the multi-platform track, focusing on using a variety of platforms, including video, audio, writing and social media, to tell stories and report on underrepresented communities.</p>
+<div id="title"> Undergraduate journalism student</div>
+  <div class="top">I am a junior journalism and public policy double major at the University of Maryland, College Park. I am on the multi-platform track, focusing on using a variety of platforms, including video, audio, writing and social media, to tell stories and report on underrepresented communities.</div>
 
-<h2>Experience</h2>
+<div class="sectionheader">Experience</div>
 
-<h3>Politics NOW Intern</h3>
-<h4>USA TODAY</h4>
-<h5>June 2020 – present</h5>
-  <p>I currently work for the NOW team out of the Washington, D.C. bureau, which is responsible for breaking news and quick updates throughout the news cycle. I worked on the presidential debates, Election Day, the certification of the states’ electoral college votes and the inauguration. I was on the team that helped Washington Bureau Chief Susan Page prepare to moderate the vice-presidential debate.</p>
+<div class="jobtitle">Politics NOW Intern</div>
+<div class="organization">USA TODAY</div>
+<div class="date">June 2020 – present</div>
+  <div class="description">I currently work for the NOW team out of the Washington, D.C. bureau, which is responsible for breaking news and quick updates throughout the news cycle. I worked on the presidential debates, Election Day, the certification of the states’ electoral college votes and the inauguration. I was on the team that helped Washington Bureau Chief Susan Page prepare to moderate the vice-presidential debate.</div>
 
-<h3>Meet the Press Intern</h3>
-<h4>NBC News</h4>
-<h5>January 2020 - May 2020</h5>
-  <p>I worked with the team to prepare for the weekly Sunday show. Each week I researched guests, topics and facts for the upcoming show and created research packets for each with possible questions and graphics. Gathered and edited videos and gathered photos for graphics Each Sunday I rotated through the social media team, control room and studio.</p>
+<div class="jobtitle">Meet the Press Intern</div>
+<div class="organization">NBC News</div>
+<div class="date">January 2020 - May 2020</div>
+  <div class="description">I worked with the team to prepare for the weekly Sunday show. Each week I researched guests, topics and facts for the upcoming show and created research packets for each with possible questions and graphics. Gathered and edited videos and gathered photos for graphics Each Sunday I rotated through the social media team, control room and studio.</div>
 
-<h3>2020 Politics Intern</h3>
-<h4>USA TODAY</h4>
-<h5>June 2019– August 2019</h5>
-  <p>Working under the 2020 election editor, I worked on articles about the Democratic primary, including debates and candidates campaign events. Working out of the Washington D.C. bureau also required me to cover Capitol Hill and several hearings, including the Muller hearing.</p>
+<div class="jobtitle">2020 Politics Intern</div>
+<div class="organization">USA TODAY</div>
+<div class="date">June 2019– August 2019</div>
+  <div class="description">Working under the 2020 election editor, I worked on articles about the Democratic primary, including debates and candidates campaign events. Working out of the Washington D.C. bureau also required me to cover Capitol Hill and several hearings, including the Muller hearing.</div>
 
-<h2>Education</h2>
-  <ul>
-    <li>Bachelor of Arts, Journalism and Public Policy, University of Maryland, College Park, 2022</li>
-  </ul>
+<div class="sectionheader">Education</div>
+  <div class="degrees">
+    <ul>
+      <li>Bachelor of Arts, Journalism and Public Policy, University of Maryland, College Park, 2022</li>
+    </ul>
+  </div>
 
-<h2>Skills</h2>
-  <ul>
+<div class=sectionheader>Skills</div>
+
+  <div class="do">
+    <ul>
     <li>Video and audio editing. Proficient in Adobe Audition and Premiere pro, creating and editing video and audio packages for articles</li>
     <li>Proficient in using DLSR and broadcast camera. Able to shoot video, storyboard in addition to editing</li>
     <li>Copy editing;Copy editor at Stories Beneath the Shell, checked a minimum of two stories per week based on AP Style</li>
     <li>Conversational in Arabic (Egyptian dialect)</li>
     <li>News writing; Interned at USA TODAY for two summers and a fall semester, worked on articles on my own and with other reporters. General reporter for Stories Beneath the Shell. Editor-in-Chief for high school newspaper for two years and news editor for one years</li>
-  </ul>
+    </ul>
+  </div>
+
 </body>
+</div>
