--- a/bootstrap-template.html
+++ b/bootstrap-template.html
@@ -14,7 +14,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Sarah Elbeshbishi</a>
     <button class="navbar-toggler" type="button" data toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,23 +25,20 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
      <li class="nav-item">
-       <a class="nav-link" href="#">Link</a>
+       <a class="nav-link" href="#">Resume</a>
      </li>
      <li class="nav-item dropdown">
        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-         Dropdown
+         My Work
        </a>
        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-         <a class="dropdown-item" href="#">Action</a>
-         <a class="dropdown-item" href="#">Another action</a>
-         <div class="dropdown-divider"></div>
-         <a class="dropdown-item" href="#">Something else here</a>
+         <a class="dropdown-item" href="#">Print</a>
+         <a class="dropdown-item" href="#">Online</a>
+         <a class="dropdown-item" href="#">Multimedia</a>
        </div>
      </li>
-     <li class="nav-item">
-       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-     </li>
    </ul>
+   <i class="fas fa-address-card fa-2x" style="color:#cdcdcd;"></i>
    <form class="form-inline my-2 my-lg-0">
      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -82,7 +79,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-  <i class="fas fa-address-card fa-2x" style="color:#cdcdcd;"></i>
 
 </body>
 
