--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<html lang="en">
 <head>
 
   <link rel="stylesheet" href="styles.css">
@@ -8,8 +10,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
-
-<head>
+</head>
 <body>
 
 <div id="container">
@@ -69,5 +70,7 @@
     </ul>
   </div>
 
-</body>
 </div>
+
+</body>
+</html>
