--- a/ElbeshbishiLayout/index.html
+++ b/ElbeshbishiLayout/index.html
@@ -20,7 +20,7 @@
       <div id="byline"> By: Kenneth Chang</div>
       <div id="date"> July 14, 2020</div>
 
-      <img src="images/uae-mars2.jpg" alt= "image2">
+      <img src="uae-mars2.jpg" alt= "image2">
       <div id="caption"> Ms. al-Amiri, right, and Omran Sharaf, the Hope project manager, during a 2015 ceremony in Dubai to unveil the mission. (The New York Times)</div>
 
       <div id="content">
@@ -76,7 +76,7 @@
 
         <p>Ms. al-Amiri is the head of science even though she never formally studied planetary science.</p>
 
-            <img src="images/uae-mars1.jpg" alt=image1>
+            <img src="uae-mars1.jpg" alt=image1>
             <div id="caption">Sarah al-Amiri is the head of science operations and the deputy project manager for the Emirates Mars Mission, the U.A.E.’s first space mission. (The New York Times)</div>
 
 
@@ -94,7 +94,7 @@
 
         <p>Once construction of the spacecraft was complete in Colorado, a large Ukrainian transport plane ferried it to Dubai, where it was to undergo a round of testing before heading to the launchpad in Japan.</p>
 
-        <img src="images/uae-mars3.jpg" alt=3>
+        <img src="uae-mars3.jpg" alt=3>
         <div id="caption">Engineers at work on the Hope spacecraft. (The New York Times)</div>
 
         <p>But at the end of February — not long before the European Space Agency and Russia postponed the launch of the Rosalind Franklin mission in part because of the logistical hurdles created by the pandemic — Mr. Sharaf and Ms. al-Amiri realized the outbreak could disrupt their carefully planned schedules if airports were shut down.</p>
