--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -7,8 +7,9 @@
 
 <body>
 
-    <div id="Masthead"> The Maryland Project</div>
-  <hr>
+    <div id="Masthead">
+    <img src="image.png" alt="Masthead">
+    </div>
 
   <div id= "header"> Megan Rapinoe and her fight for equal pay</div>
 
