--- a/resume/index.html
+++ b/resume/index.html
@@ -2,6 +2,17 @@
 
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width" />
+
+
+<style>
+     @media screen and (max-width:900px) {}
+     @media screen and (min-width:900px) and (max-width:1200px) {}
+     @media screen and (min-width:1200px) {}
+</style>
+
+<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+<script type="text/javascript" src="css3-mediaqueries.js"></script>
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://kit.fontawesome.com/dbe1eb7faa.js" crossorigin="anonymous"></script>
