--- a/resume/index.html
+++ b/resume/index.html
@@ -33,7 +33,7 @@
 
       <div class="row">
 
-        <div class="col-9 pr-6">
+        <div class="col-md-9 pr-6">
             <div class="sectionheader">Experience</div>
 
               <div class="jobtitle">Politics NOW Intern</div>
@@ -65,7 +65,7 @@
 
         </div>
 
-        <div class="col-3 pl-2 pt-4" style="background-color:#5E7708">
+        <div class="col-md-3 pl-2 pt-4" style="background-color:#5E7708">
                 <div id="work">My Work</div>
 
   <div class="col">
