--- a/resume/index.html
+++ b/resume/index.html
@@ -29,7 +29,6 @@
     <a href="https://www.linkedin.com/in/sarahelbeshbishi/" class="fab fa-linkedin fa-2x px-1" style="color: #5E7708"></a>
     <a href="https://github.com/selbeshbishi" class="fab fa-github fa-2x px-1" style="color: #5E7708"></a>
     <a href="mailto:selbeshb@terpmail.umd.edu" class="fas fa-envelope fa-2x px-1" style="color: #5E7708"></a>
-<!-- I built this myself-->
 
       <div class="row">
 
@@ -59,7 +58,7 @@
                     <li>Proficient in using DLSR and broadcast camera. Able to shoot video, storyboard in addition to editing</li>
                     <li>Copy editing;Copy editor at Stories Beneath the Shell, checked a minimum of two stories per week based on AP Style</li>
                     <li>Conversational in Arabic (Egyptian dialect)</li>
-                    <li>News writing; Interned at USA TODAY for two summers and a fall semester, worked on articles on my own and with other reporters. General reporter for Stories Beneath the Shell. Editor-in-Chief for high school newspaper for two years and news editor for one years</li>
+                    <li>News writing; Interned at USA TODAY for two summers and a fall semester, worked on articles on my own and with other reporters. General reporter for Stories Beneath the Shell. Editor-in-Chief for high school newspaper for two years and news editor for one year</li>
                   </ul>
               </div>
 
