--- a/HTML Frame Project/index.html
+++ b/HTML Frame Project/index.html
@@ -56,7 +56,10 @@
   <h2>Chapter Headline</h2>
 </div>
 
-<img class="imagefiller" src="rapinoe6.jpg" alt="imagefiller">
+<figure class="figure">
+  <img src="rapinoe6.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+  <figcaption class="figure-caption">A caption for the above image.</figcaption>
+</figure>
 
 <div id="container">
 <div class="text">
