--- a/data-viz-project/story-data.html
+++ b/data-viz-project/story-data.html
@@ -53,6 +53,8 @@
                         <h3>Public distrust of CDC</h3>
                         <iframe title="Americans trust of the CDC by party in 2020" aria-label="Grouped Bars" id="datawrapper-chart-ig8us" src="https://datawrapper.dwcdn.net/ig8us/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="322"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
 </script>
+<iframe title="Job approval of President Donald Trump" aria-label="Interactive line chart" id="datawrapper-chart-Z6CdD" src="https://datawrapper.dwcdn.net/Z6CdD/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+</script>
                 </div>
 
                 <div class="col-md-6">
@@ -60,6 +62,8 @@
                         <p>"At 7:47 a.m. on the Sunday of Memorial Day weekend, Dr. Jay Butler pounded out a grim email to colleagues at the Centers for Disease Control and Prevention in Atlanta."</p>
                         <div class="flourish-embed flourish-chart" data-src="visualisation/5921146"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 
+                        <iframe title="Total COVID-19 cases by state" aria-label="Map" id="datawrapper-chart-wSNO7" src="https://datawrapper.dwcdn.net/wSNO7/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="475"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+</script>
 
         </div>
 </div>
